Closed Bug 154979 Opened 22 years ago Closed 22 years ago

block code should use gNoisyMaxElementSize instead of NOISY_MAX_ELEMENTSIZE

Categories

(Core :: Layout, defect)

x86
Windows 98
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Assigned: bernd_mozilla)

References

()

Details

Attachments

(1 file)

Chris Waterson implemented that nice a nifty block reflow debug code which works
great with 
set GECKO_BLOCK_DEBUG_FLAGS=reflow
the sources at 
http://lxr.mozilla.org/seamonkey/source/layout/html/base/src/nsBlockFrame.cpp#93
indicate that one could also use 
set GECKO_BLOCK_DEBUG_FLAGS=max-element-size
This would be very useful but all MES debug messages in the block code are
encapsulated within a #ifdef NOISY_MAX_ELEMENTSIZE , so my proposal is to
replace these #ifdef's with: 
#ifdef DEBUG
  if(gNoisyMaxElementSize) {
   message goes here
  }
#endif
mine
Assignee: attinasi → bernd.mielke
Summary: block code should use gNoisyMaxElementSize instead of NOISY_MAX_ELEMENTSIZE → block code should use gNoisyMaxElementSize instead of NOISY_MAX_ELEMENTSIZE
Attached patch patchSplinter Review
attachment 89271 [details] shows a example of the patch
em, I meant attachment 89721 [details] - to much french red wine
Comment on attachment 89723 [details] [diff] [review]
patch

sr=waterson
Attachment #89723 - Flags: superreview+
Comment on attachment 89723 [details] [diff] [review]
patch

r=karnaze
Attachment #89723 - Flags: review+
fix checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: